// AppInstClient proto

syntax = "proto3";
package edgeproto;

import "google/api/annotations.proto";
import "github.com/mobiledgex/edge-cloud/protogen/protogen.proto";
import "github.com/mobiledgex/edge-cloud/d-match-engine/dme-proto/loc.proto";
import "appinst.proto";
import "gogoproto/gogo.proto";

option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_sizecache_all) = false;

message AppInstClientLookupKey {
  // AppInst Key
  AppInstKey app_inst_key = 1 [(protogen.keytag) = "appinstkey"];
  // AppInstClient Unique Id
  string unique_id = 2 [(protogen.keytag) = "uniqueid"];
  // AppInstClient Unique Id Type
  string unique_id_type = 3 [(protogen.keytag) = "uniqueidtype"];

  option (protogen.generate_matches) = true;
  option (protogen.obj_key) = true;
  option (gogoproto.gostring) = true;
}

// AppKey uniquely identifies an App
message AppInstClientKey {
  AppInstClientLookupKey key = 1 [(gogoproto.nullable) = false];

  option (protogen.notify_message) = true;
  option (protogen.generate_matches) = true;
  option (protogen.generate_cud) = true;
  option (protogen.generate_cache) = true;
  option (protogen.notify_cache) = true;
  option (protogen.not_required) = "Key.AppInstKey.ClusterInstKey.ClusterKey.Name,Key.AppInstKey.ClusterInstKey.Organization,Key.AppInstKey.ClusterInstKey.CloudletKey.Name,Key.AppInstKey.ClusterInstKey.CloudletKey.Organization,Key.UniqueId,Key.UniqueIdType";
  option (protogen.alias) = "uniqueid=Key.UniqueId,uniqueidtype=Key.UniqueIdType,appname=Key.AppInstKey.AppKey.Name,appvers=Key.AppInstKey.AppKey.Version,app-org=Key.AppInstKey.AppKey.Organization,cluster=Key.AppInstKey.ClusterInstKey.ClusterKey.Name,cluster-org=Key.AppInstKey.ClusterInstKey.Organization,cloudlet=Key.AppInstKey.ClusterInstKey.CloudletKey.Name,cloudlet-org=Key.AppInstKey.ClusterInstKey.CloudletKey.Organization";
  option (protogen.uses_org) = "none";
}


// Client is an AppInst client that called FindCloudlet DME Api
message AppInstClient {
  // Fields are used for the Update API to specify which fields to apply
  repeated string fields = 1;
  // Unique identifier key
  AppInstClientKey client_key = 2 [(gogoproto.nullable) = false];
  // Location of the Client
  distributed_match_engine.Loc location = 3 [(gogoproto.nullable) = false];
  // Id of client assigned by server (internal use only)
  int64 notify_id = 4 [(protogen.backend) = true, (protogen.hidetag) = "nocmp"];

  option (protogen.notify_message) = true;
  option (protogen.notify_print_send_recv) = false;
}

service AppInstClientApi {
  // Show application instance clients.
  rpc ShowAppInstClient(AppInstClientKey) returns (stream AppInstClient) {
    option (google.api.http) = {
      post: "/show/appinstclient"
      body: "*"
    };
    option (protogen.stream_out_incremental) = true;
    option (protogen.mc2_api) = "ResourceAppAnalytics,ActionView,Key.AppInstKey.AppKey.Organization";
    option (protogen.non_standard_show) = true;
  }
  // This is used unternally to forward AppInstClients to other Controllers
  rpc StreamAppInstClientsLocal(AppInstClientKey) returns (stream AppInstClient) {}
}
